--- a/index.html
+++ b/index.html
@@ -14,8 +14,18 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="item">
-  <button class="btn btn-danger"> hola</button>
+  <h1 style="text-align: center; padding: auto;">Hola</h1> 
+<div class="items">
+  
+  
+  
+  <div class="item">    
+    <button class="btn btn-danger" style="margin-right: 10px;"> hola</button> 
+  </div>
+
+  <div class="item">
+    <input type="email" name="" class="form-control" placeholder="escribe un mensaje">
+  </div>
 </div>
   
   
